Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o r17831 fixed C++ for xerces 3.x by Adrian

 o r17820 fixed exception handling when sending update after connection lost on XMLRPC

 o r17813 Introduced ErrorCode.USER_UPDATE_DEADMESSAGE, see
          http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.update.html
 
 o r17787 Stomp client integration see http://stomp.codehaus.org/ for easy integration of any clients
          like the iPhone.

 o r17776 htpasswd authorization: Supporting now topic names starting with specific token:
          WeatherProxy:yZxMiqIKTc:connect,disconnect,publish("startsWith:weather."),subscribe("startsWith:weather."),unSubscribe

 o r17773 Extended Security plugin interface to be able to intercept exceptions thrown back to clients
          Added new method I_Session#interceptExeptionByAuthorizer():
	  Incompatible API change in I_Session!
	  Add a dummy implementation and return null to have original behaviour (in case you have your own security plugin)

 o r17770 HtPasswd Authentication/Authorization: If a loginName matches exactly only this is evaluated
          before all other matching entries where used to find a valid password

 o r17768 Fixing gap that a quickly reconnecting client leads to missing toPolling() toAlive() firing cylce (race condition)
          Had impact for cluster setup with callback tunnel


Changes for 2.0.0 [2009-09-09] r17766 (JDK >= 1.5 only)
=======================================================

 o r17755 Incompatible java client API change: Added I_ConnectionStatusListener#toAliveSync
          which tells the listener as soon as all queued back client side messages are delivered to the server
          and further server calls are synchronous (the returned data is from the real server).
          The compiler will tell the places to add this method to your code.
